--- a/src/publisher_subscriber/CMakeLists.txt
+++ b/src/publisher_subscriber/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(PublisherSubscriber)
+project(publisher_subscriber)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
@@ -113,7 +113,7 @@ catkin_package(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES PublisherSubscriber
+#  LIBRARIES publisher_subscriber
 #  CATKIN_DEPENDS roscpp
 #  DEPENDS system_lib
 )
@@ -131,7 +131,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/PublisherSubscriber.cpp
+#   src/${PROJECT_NAME}/publisher_subscriber.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -142,7 +142,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/PublisherSubscriber_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/publisher_subscriber.cpp)
 add_executable(listener src/listener.cpp)
 add_executable(talker src/talker.cpp)
 
@@ -203,7 +203,7 @@ target_link_libraries(talker ${catkin_LIBRARIES})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_PublisherSubscriber.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_publisher_subscriber.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
