--- a/src/publisher_subscriber/package.xml
+++ b/src/publisher_subscriber/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>PublisherSubscriber</name>
+  <name>publisher_subscriber</name>
   <version>0.0.0</version>
-  <description>The PublisherSubscriber package</description>
+  <description>The publisher_subscriber package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/PublisherSubscriber</url> -->
+  <!-- <url type="website">http://wiki.ros.org/publisher_subscriber</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
