--- a/src/publisher_subscriber/CMakeLists.txt
+++ b/src/publisher_subscriber/CMakeLists.txt
@@ -146,6 +146,14 @@ include_directories(
 add_executable(listener src/listener.cpp)
 add_executable(talker src/talker.cpp)
 
+add_executable(add_two_ints_server src/add_two_ints_server.cpp)
+target_link_libraries(add_two_ints_server ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_server publisher_subscriber_gencpp)
+
+add_executable(add_two_ints_client src/add_two_ints_client.cpp)
+target_link_libraries(add_two_ints_client ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_client publisher_subscriber_gencpp)
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
