Add fake_ar_publisher example.

--- a/src/myworkcell_core/package.xml
+++ b/src/myworkcell_core/package.xml
@@ -52,7 +52,12 @@
   <build_depend>roscpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
+  
+  <depend>fake_ar_publisher</depend>
 
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <depend>geometry_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
