--- a/src/myworkcell_core/CMakeLists.txt
+++ b/src/myworkcell_core/CMakeLists.txt
@@ -141,6 +141,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/myworkcell_core_node.cpp)
 add_executable(vision_node src/vision_node.cpp)
+add_executable(myworkcell_node src/myworkcell_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -152,12 +153,16 @@ add_executable(vision_node src/vision_node.cpp)
 ## same as for the library above
 #add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(vision_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(myworkcell_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(vision_node ${catkin_LIBRARIES})
+target_link_libraries(myworkcell_node ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
