--- a/src/myworkcell_core/package.xml
+++ b/src/myworkcell_core/package.xml
@@ -59,6 +59,9 @@
   <exec_depend>message_runtime</exec_depend>
   <depend>geometry_msgs</depend>
 
+  <build_depend>actionlib_msgs</build_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
