--- a/src/actionlib_tutorials/CMakeLists.txt
+++ b/src/actionlib_tutorials/CMakeLists.txt
@@ -9,6 +9,7 @@ project(actionlib_tutorials)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -59,17 +60,15 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  DIRECTORY action
+  FILES Fibonacci.action
+)
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES actionlib_msgs std_msgs  # Or other packages containing msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -103,7 +102,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES actionlib_tutorials
-#  CATKIN_DEPENDS roscpp
+  CATKIN_DEPENDS roscpp actionlib_msgs
 #  DEPENDS system_lib
 )
 
