Add actionlib client.
The actionlib client is added to the actionlib_tutorials package.
The proces:
1. The client sends an action to the server
2. The server calculates the Fibonacci sequence.
3. The server sends back he's done.
4. Sucess

--- a/src/actionlib_tutorials/CMakeLists.txt
+++ b/src/actionlib_tutorials/CMakeLists.txt
@@ -130,6 +130,19 @@ include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(fibonacci_server src/fibonacci_server.cpp)
 
+#client
+add_executable(fibonacci_client src/fibonacci_client.cpp)
+
+target_link_libraries( 
+  fibonacci_client
+  ${catkin_LIBRARIES}
+)
+
+add_dependencies(
+  fibonacci_client
+  ${actionlib_tutorials_EXPORTED_TARGETS}
+)
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
