--- a/src/smr1_moveit_config/package.xml
+++ b/src/smr1_moveit_config/package.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>smr1_moveit_config</name>
-  <version>0.0.0</version>
-  <description>The smr1_moveit_config package</description>
 
-  <maintainer email="ros-industrial@todo.todo">ros-industrial</maintainer>
+  <name>ur10_moveit_config</name>
+  <version>1.2.7</version>
+  <description>
+     An automatically generated package with all the configuration and launch files for using the ur10 with the MoveIt Motion Planning Framework
+  </description>
+  <author>Felix Messmer</author>
+  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
+  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
+  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
+  
+  <license>BSD</license>
 
-  <license>MIT</license>
+  <url type="website">http://moveit.ros.org/</url>
+  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
+  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>
 
+  <exec_depend>moveit_ros_move_group</exec_depend>
+  <exec_depend>moveit_planners_ompl</exec_depend>
+  <exec_depend>moveit_ros_visualization</exec_depend>
+  <exec_depend>moveit_fake_controller_manager</exec_depend>
+  <exec_depend>moveit_simple_controller_manager</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <depend>ur_description</depend>
+
+  <test_depend>roslaunch</test_depend>
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-
-
-  <export>
-  </export>
+  
 </package>
